--- a/src/App.scss
+++ b/src/App.scss
@@ -213,6 +213,10 @@ $timeline-item-focus-outline: 2px;
   transition: $transition-fast;
   background: $header-bg;
 
+  &.title-only {
+    grid-template-columns: 2fr 1fr 1fr 0fr 0fr; // Hide unused columns
+  }
+
   &.completed { background: $light-bg-success; border-color: $light-border-success; }
   &.current { background: rgba($royal-blue-light, 0.1); border-color: $royal-blue-light; }
   &.past { opacity: 0.7; }
